# crunch

./: .bazelrc  .clang-format  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  Doxyfile  LICENSE  MODULE.bazel  README.md  annotated.html  annotated_dup.js  classCrunch_1_1detail_1_1Decoder-members.html  classCrunch_1_1detail_1_1Decoder.html  classCrunch_1_1fields_1_1Scalar-members.html  classCrunch_1_1fields_1_1Scalar.html  classCrunch_1_1fields_1_1Scalar.js  classCrunch_1_1fields_1_1String-members.html  classCrunch_1_1fields_1_1String.html  classCrunch_1_1messages_1_1ArrayField-members.html  classCrunch_1_1messages_1_1ArrayField.html  classCrunch_1_1messages_1_1ArrayField.js  classCrunch_1_1messages_1_1Field-members.html  classCrunch_1_1messages_1_1Field.html  classCrunch_1_1messages_1_1Field.js  classCrunch_1_1messages_1_1MapField-members.html  classCrunch_1_1messages_1_1MapField.html  classCrunch_1_1messages_1_1MapField.js  classes.html  conceptCrunch_1_1IntegrityPolicy.html  conceptCrunch_1_1IsBuffer.html  conceptCrunch_1_1IsPresenceValidator.html  conceptCrunch_1_1SerdesPolicy.html  conceptCrunch_1_1Validator.html  conceptCrunch_1_1detail_1_1IsBuffer.html  conceptCrunch_1_1detail_1_1UniqueMessageIds.html  conceptCrunch_1_1messages_1_1CrunchMessage.html  conceptCrunch_1_1messages_1_1HasCrunchMessageInterface.html  conceptCrunch_1_1messages_1_1HasValidateNoId.html  conceptCrunch_1_1messages_1_1HasValidateWithId.html  (+199 more)
docs/: decoder.md  field_types.md  serialization.md
include/: BUILD
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+43 more)
(+73 files in other folders)
